force-app/main/default/objects/Asset/fields/Authorized_Service_Network__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Service_Network__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if this vehicle has only been serviced in the authorized <Brand> network. Required to maintain <Brand> 10 warranty.</description>
    <inlineHelpText>True if all services were at authorized <Brand> dealers.</inlineHelpText>
    <label>Authorized Service Network</label>
    <type>Checkbox</type>
</CustomField>