force-app/main/default/objects/Asset/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Vehicle exterior color (e.g., "Branco Pérola", "Gris Plata").</description>
    <inlineHelpText>Exterior color description.</inlineHelpText>
    <label>Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>