force-app/main/default/objects/Asset/fields/Connected_Status__c.field-meta.xml
<CustomField>
    <fullName>Connected_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this vehicle is enrolled in the Brand Connected program.</description>
    <inlineHelpText>True if the vehicle is connected.</inlineHelpText>
    <label>Connected Status</label>
    <type>Checkbox</type>
</CustomField>