force-app/main/default/objects/Asset/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <description>Vehicle generation code (e.g., "G12" for 12th-gen Corolla). Used to match technical bulletins and warranty programs.</description>
    <inlineHelpText>Generation code (e.g., G12).</inlineHelpText>
    <label>Generation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>