force-app/main/default/objects/Asset/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <description>Date of the most recent service performed on this vehicle.</description>
    <inlineHelpText>When the vehicle last entered service.</inlineHelpText>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>