force-app/main/default/objects/Asset/fields/Last_Service_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Mileage__c</fullName>
    <description>Odometer reading at the time of the last service (km).</description>
    <inlineHelpText>Mileage in km at the last service.</inlineHelpText>
    <label>Last Service Mileage</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>