force-app/main/default/objects/Asset/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <description>Model year of the vehicle (e.g., 2024).</description>
    <inlineHelpText>Vehicle model year (4-digit).</inlineHelpText>
    <label>Model Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>