force-app/main/default/objects/Asset/fields/Patente__c.field-meta.xml
<CustomField>
    <fullName>Patente__c</fullName>
    <description>Argentine vehicle license plate (e.g., "AH 830 SP"). External ID for AR vehicle matching.</description>
    <externalId>true</externalId>
    <inlineHelpText>AR patente / license plate.</inlineHelpText>
    <label>Patente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>