force-app/main/default/objects/Asset/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <description>Brazilian vehicle license plate (Mercosul format). External ID for BR vehicle matching.</description>
    <externalId>true</externalId>
    <inlineHelpText>BR placa / license plate.</inlineHelpText>
    <label>Placa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>