force-app/main/default/objects/Asset/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>Vehicle Identification Number / Chassi (17-char standard). External ID for vehicle lookups.</description>
    <externalId>true</externalId>
    <inlineHelpText>VIN of the vehicle.</inlineHelpText>
    <label>VIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>